# tamgaOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  github.ps1  pico_sdk_import.cmake  tamgaOS.ino
docs/: arduino-port.md  esp32-port.md  mimari.md  pico-port.md  tamga-dili.md
esp32/: CMakeLists.txt
esp32/main/: CMakeLists.txt
src/: ana.c  tamga_yapilandirma.h
src/cekirdek/: bellek.c  bellek.h  cekirdek.c  cekirdek.h  olay.c  olay.h  syscall.c  syscall.h  zamanlayici.c  zamanlayici.h
src/hal/: hal.h  hal_arduino.cpp  hal_esp32.c  hal_host.c  hal_pico.c
src/kabuk/: defter.c  defter.h  kabuk.c  kabuk.h  komutlar.c  komutlar.h
src/tamga/: agac.c  agac.h  ayristirici.c  ayristirici.h  belirtec.h  deger.c  deger.h  dizi.c  dizi.h  metin_islev.c  metin_islev.h  ortam.c  ortam.h  sozluk.c  sozluk.h  tamga.c  tamga.h  tarayici.c  tarayici.h  yorumlayici.c  yorumlayici.h
src/tamga/moduller/: mod_dosya.c  mod_sistem.c  mod_zaman.c  modul_dagitici.c  moduller.h
src/tds/: tds.h  tds_ram.c  tds_tohum.c
testler/: dil_test.c  tarayici_test.c
uygulamalar/: bilgi.tam  diziler.tam  dongu.tam  hesapmakinesi.tam  led.tam  merhaba.tam  metinler.tam  selamla.tam  sozlukler.tam
